# simple_http_server

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  run_me.sh
src/: Config.h.in  HttpLib.h  LogEngine.cpp  LogEngine.h  Options.h  Server.cpp  ServerError.h  Templates.h
src/dao/: Dao.h  DaoExceptions.cpp  EphemeralStorage.cpp  EphemeralStorage.h  SqliteStorage.cpp  SqliteStorage.h
src/http/: Http.cpp  Http.h  HttpServer.cpp  RestPath.cpp
src/router/: HttpPath.cpp  HttpRouter.cpp  HttpRouter.h
test/: curl_test.sh  main.cpp  test_database_eph.cpp  test_database_sqlite.cpp  test_http_path_regex.cpp  test_server_functional_tests.cpp  test_server_functional_tests_eph.cpp  test_server_functional_tests_sql.cpp  test_server_libs.cpp
